--- a/package.json
+++ b/package.json
@@ -15,17 +15,14 @@
     "postinstall": "cd client && npm i",
     "reinstall": "npm cache clean && rm -rf node_modules && npm run global && npm install",
     "global": "npm install -g gulp webpack eslint morgan",
-
     "development": "echo -----Development-----",
     "seeder": "node seeder",
     "dev:front": "NODE_ENV=development node server.js",
     "dev:back": "nodemon server.js",
     "start": "nodemon server.js",
-
     "production": "echo -----Production-----",
     "build:front": "webpack --config webpack.dist.config.js",
     "beastie": "npm install --production",
-
     "other": "echo -----other-----",
     "eslint": "eslint --init",
     "new-component": "gulp component --name [componentName]",
@@ -74,6 +71,7 @@
     "eslint-config-google": "^0.6.0",
     "eslint-config-standard": "^5.3.5",
     "eslint-plugin-angular": "^1.3.1",
+    "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "eventsource-polyfill": "^0.9.6",
