add front end package

--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "NodeJS"
   ],
   "scripts": {
-    "installation": "echo -----Development-----",
+    "----------": "-----Installation-----",
     "preinstall": "",
     "postinstall": "cd client && npm i",
     "reinstall": "npm cache clean && rm -rf node_modules && npm run global && npm install",
     "global": "npm install -g gulp webpack eslint morgan",
-    "development": "echo -----Development-----",
+    "----------": "-----Development-----",
     "seeder": "node seeder",
     "dev:front": "NODE_ENV=development node server.js",
     "dev:back": "nodemon server.js",
     "start": "nodemon server.js",
-    "production": "echo -----Production-----",
+    "----------": "-----Production-----",
     "build:front": "webpack --config webpack.dist.config.js",
     "beastie": "npm install --production",
-    "other": "echo -----other-----",
+    "----------": "-----other-----",
     "eslint": "eslint --init",
     "new-component": "gulp component --name [componentName]",
     "new-module": "gulp odule --name [moduleName]"
