--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "angular-mocks": "^1.5.0",
     "angular-resource": "^1.5.8",
     "angular-sanitize": "^1.5.8",
+    "angular-touch": "^1.5.8",
     "angular-translate": "^2.12.1",
     "angular-translate-loader-partial": "^2.12.1",
     "angular-ui-router": "^1.0.0-beta.1"
