--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
+    "escpos": "^2.1.0",
     "express": "^4.14.0",
     "express-flash": "0.0.2",
     "express-session": "^1.14.0",
