restructure dev enviroment.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "postinstall": "cd client && npm i",
     "reinstall": "npm cache clean && rm -rf node_modules && npm run global && npm install",
     "global": "npm install -g gulp webpack eslint",
+    "init": "gulp init",
     "----------Development----------": "",
-    "seeder": "node seeder",
+    "seed": "node scripts/seeds.js",
+    "seed:copy": "node scripts/copyFromDB.js",
     "dev:front": "NODE_ENV=development node server.js",
     "dev:back": "NODE_ENV=dev nodemon server.js",
     "----------Production----------": "",
@@ -83,7 +85,9 @@
     "fs-walk": "0.0.1",
     "graceful-fs": "^4.1.5",
     "gulp": "^3.9.0",
+    "gulp-prompt": "^0.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-template": "^3.0.0",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.22.0",
