--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "cron": "^1.1.1",
     "dotenv": "^2.0.0",
     "errorhandler": "^1.4.3",
     "escpos": "^2.1.0",
