--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
+    "angular-bootstrap-colorpicker": "^3.0.25",
     "angular-material": "^1.1.0-rc.5",
     "angular-mocks": "^1.5.0",
     "angular-resource": "^1.5.8",
