--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "angular-mocks": "^1.5.0",
     "angular-resource": "^1.5.8",
     "angular-sanitize": "^1.5.8",
+    "angular-smart-table": "^2.1.8",
     "angular-touch": "^1.5.8",
     "angular-translate": "^2.12.1",
     "angular-translate-loader-partial": "^2.12.1",
