--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "angular-touch": "^1.5.8",
     "angular-translate": "^2.12.1",
     "angular-translate-loader-partial": "^2.12.1",
+    "angular-ui-mask": "^1.8.7",
     "angular-ui-router": "^1.0.0-beta.1"
   }
 }
