--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "angular-translate": "^2.12.1",
     "angular-translate-loader-partial": "^2.12.1",
     "angular-ui-mask": "^1.8.7",
-    "angular-ui-router": "^1.0.0-beta.1"
+    "angular-ui-router": "^1.0.0-beta.1",
+    "font-awesome": "^4.7.0"
   }
 }
