edit server.js for c9

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "seed": "node scripts/seeds.js",
     "seed:copy": "node scripts/copyFromDB.js",
     "dev:front": "NODE_ENV=development node server.js",
+    "dev:front-c9": "NODE_ENV=development CLOUD9=true node server.js",
     "dev:back": "NODE_ENV=dev nodemon server.js",
     "----------Production----------": "",
     "beastie": "npm install --production && npm run build && npm start",
