--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "angular-translate-loader-partial": "^2.12.1",
     "angular-ui-mask": "^1.8.7",
     "angular-ui-router": "^1.0.0-beta.1",
+    "fastclick": "^1.0.6",
     "font-awesome": "^4.7.0"
   }
 }
