--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-bootstrap-colorpicker": "^3.0.25",
+    "angular-local-storage": "^0.5.0",
     "angular-material": "^1.1.0-rc.5",
     "angular-mocks": "^1.5.0",
     "angular-resource": "^1.5.8",
