--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "angular-ui-mask": "^1.8.7",
     "angular-ui-router": "^1.0.0-beta.1",
     "fastclick": "^1.0.6",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "ng-focus-if": "^1.0.7"
   }
 }
