--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "contributors": [
     {
       "name": "yu-an.chen",
-      "email": ""
+      "email": "Atwood12@gmail.com"
     }
   ],
   "scripts": {
