--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chart.js": "^2.4.0",
     "colors": "^1.1.2",
     "compression": "^1.6.2",
     "connect-history-api-fallback": "^1.1.0",
