fix checkin bugs and update angular

--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,12 @@
   "description": "package for front end",
   "main": "index.js",
   "dependencies": {
-    "angular": "^1.5.8",
+    "angular": "^1.6.1",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-bootstrap-colorpicker": "^3.0.25",
     "angular-local-storage": "^0.5.0",
-    "angular-material": "^1.1.0-rc.5",
+    "angular-material": "^1.1.1",
     "angular-mocks": "^1.5.0",
     "angular-resource": "^1.5.8",
     "angular-sanitize": "^1.5.8",
