--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
+    "fs-extra": "^4.0.0",
     "logger": "0.0.1",
     "lusca": "^1.4.1",
     "mkdirp": "^0.5.1",
